--- a/.prettierignore
+++ b/.prettierignore
@@ -2,3 +2,13 @@ dist
 node_modules
 .github
 .changeset
+BLOG-OPTIMIZATION-PHASE-2.md
+CONTACT-PAGE-ENHANCEMENT-PLAN.md
+KEYWORD-INTEGRATION-MASTER-PLAN.md
+KEYWORD-STRATEGY-PLAN.md
+META-AUDIT-REPORT.md
+META-TITLES-COMPLETE-LIST.md
+SEO-AUDIT-KEYWORD-DENSITY.md
+SEO-PROGRESS-AUDIT-BEFORE-AFTER.md
+SEO-TESTING-GUIDE.md
+VISUAL-LAYOUT-UPDATE.md
